<resources>
    <string name="app_name">android_jetpack</string>
    <string name="phone">打电话</string>
    <string name="contacts">联系人</string>
    <string name="collection">收藏</string>

    <string name="phone1">1</string>
    <string name="phone2">2</string>
    <string name="phone3">3</string>
    <string name="phone4">4</string>
    <string name="phone5">5</string>
    <string name="phone6">6</string>
    <string name="phone7">7</string>
    <string name="phone8">8</string>
    <string name="phone9">9</string>
    <string name="phone0">0</string>

    <string name="phonexin">*</string>
    <string name="phonejin">#</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>